--- a/faq.html
+++ b/faq.html
@@ -90,8 +90,18 @@
                         </div>
                         <p>
                             This list of frequently asked questions and answers can provide you with information on the home inspection process and its benefits.  If your question is not covered here, please contact us at Dunright Home & Building Inspections for more detailed information.
-                        </p>
+                        </p>                        
 
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="feature mt-125">
+            <div class="container">
+                <div class="row align-items-end">
+ 
+                    <div class="col-md-8">
                         <div class="section-header">
                             <h3>What is a home inspection?</h3>
                         </div>
@@ -185,10 +195,13 @@
                             <h3>What is ASHI?</h3>
                         </div>
                         <p>
+                            <a href="www.ashi.org" target="_blank">ASHI, or the American Society of Home Inspectors</a> has worked to build consumer awareness of home inspection and to enhance the professionalism of its membership since 1976. The ASHI Standards of Practice and Code of Ethics serves as a performance guideline for home inspectors, and is universally recognized and accepted by many professional and governmental bodies. ASHI is an organization of independent, professional home inspectors within the United States who make a commitment to conduct inspections in accordance with the ASHI Standards of Practice and Code of Ethics.
+                        </p>
 
-                        </p> <br><br>
+                        <p>
+                            Although ASHI does not recognize any inspection company outside U.S. borders nor accept foreign-based inspectors into their organization, having received my training, certification and experience in the U.S., I am proud to honour and abide by these same Standards of Practice and Code of Ethics. 
 
-                        
+                        </p> <br><br>                   
 
                     </div>
                 </div>
