--- a/service.html
+++ b/service.html
@@ -152,6 +152,26 @@
                         </div>
                     </div>
 
+                    <div class="col-md-8">
+                    <p>
+                        <li>
+                            The report is delivered within 72 hours to give you vital information about your prospective purchase in a timely manner to assist in your real estate transaction.
+                        </li><br>
+                        <li>
+                            Data and digital photos provide clear documentation of the inspector’s findings
+                        </li><br>
+                        <li>
+                            Over 600 items are evaluated and reported on in a computer generated factual document for easy reference.
+                        </li><br>
+                        <li>
+                            We provide suggestions or recommendations of repairs, replacement, further review or maintenance required.
+                        </li><br>
+                        <li>
+                            The report can be e-mailed for your convenience or we can provide a hard copy if you prefer.
+                        </li>
+                    </p>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -164,10 +184,11 @@
 
                             <div class="col-md-8">
 
-                                
+                            
                                 <div class="section-header" id="pre-purchs">
                                     <h3>Pre-purchase Inspections</h3>
                                 </div>
+
                                 <p>
                                     Pre-purchase Inspections are the most common type of inspection and by far the most vital. For most people, buying a home is the largest investment of their life. As with any investment, there is a need for thorough evaluation and analysis before the final commitment. To roll the dice on the purchase of a home without a building inspectior’s evaluation of the property is gambling, not investing. Almost all buildings have defects and the excitement of owning a home can quickly diminish with unpleasant costly surprises after moving in. A professional home inspection is the best way to gain a thorough knowledge of the actual condition your prospective purchase enabling you to make a wise decision.
                                 </p><br><br>
