--- a/faq.html
+++ b/faq.html
@@ -79,9 +79,9 @@
         <div class="feature mt-125">
             <div class="container">
                 <div class="row align-items-end">
-                    <div class="col-md-6">
+                    <div class="col-md-5">
                         <div class="feature-img">
-                            <img src="" alt="Image">
+                            <img src="img/question.png" alt="Image">
                         </div>
                     </div>
                     <div class="col-md-6">
