--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="owl-carousel">
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <img src="img/carousel-1.jpg" alt="Image">
+                            <img src="img/home2.jpg" alt="Image">
                         </div>
                         <div class="carousel-text">
                             <h1>Welcome</h1>
@@ -95,7 +95,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <img src="img/carousel-2.jpg" alt="Image">
+                            <img src="img/home3.jpg" alt="Image">
                         </div>
                         <div class="carousel-text">
                             <h1>What is a home inspection?</h1>
@@ -109,7 +109,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <img src="img/carousel-3.jpg" alt="Image">
+                            <img src="img/home4.jpg" alt="Image">
                         </div>
                         <div class="carousel-text">
                             <h1>Our inspection report</h1>
