--- a/about.html
+++ b/about.html
@@ -76,15 +76,13 @@
         
 
         <!-- About Start -->
-        <div class="about mt-125">
+        <div class="feature mt-125">
             <div class="container">
-                <div class="row align-items-center">
+                <div class="row align-items-start">
                     <div class="col-md-6">
                         <div class="about-img">
-                            <div class="about-img-1">
+                            <div class="feature-img">
                                 <img src="img/jack.jpg" alt="Image">
-                            </div>
-                            <div class="about-img-2">
                             </div>
                         </div>
                     </div>
