--- a/service.html
+++ b/service.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <title>Dunright Inspections - Services</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Consulting Website Template Free Download" name="keywords">
-        <meta content="Consulting Website Template Free Download" name="description">
+        <meta content="building inspection" name="keywords">
+        <meta content="We are the first licensed home and building inspection company in The Bahamas. We are based in New Providence (Nassau) but are also available to do inspections throughout all the many islands and cays of The Bahamas." name="description">
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
