--- a/faq.html
+++ b/faq.html
@@ -258,7 +258,7 @@
             <div class="container copyright">
                 <div class="row">
                     <div class="col-md-6">
-                        <p>&copy; <a href="index.html"> Dunright Home & Building Inspections</a>, All Right Reserved.</p>
+                        <p>&copy; <a href="index.html"> Dunright Home & Building Inspections</a>, All Rights Reserved.</p>
                     </div>
 
                 </div>
